Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference50.out
MethodReference50.java:23:14: compiler.err.cant.resolve.location: kindname.variable, NonExistentType, , , (compiler.misc.location: kindname.class, MethodReference50, null)
1 error
